FOF 3.6.0
================================================================================
~ Drop support for PHP 5.6, 7.0
~ Drop support for PHP Joomla! 3.8
- Removed obsolete CLI tool
- Removed deprecated Form package and Scaffolding feature
- Removed the LESS package
- Removed the HAL package and the ability of the JSON view to render HAL documents natively
# [LOW] Joomla 4 broke b/c with the Controller's setRedirect

FOF 3.5.4
================================================================================
+ Draggable reordering support in Joomla 4
+ Common Blade templates (backported from FOF 4)
~ Update the CLI application for Joomla 4 Beta 1
~ Apply Joomla version suffixes to all view templates, not just forms
# [HIGH] DateDecorator fails to call correctly certain DateTime methods, including getTimezone() and diff(), returning invalid results
# [HIGH] Input in Joomla 4 always returns stale data, ignoring changes made by routing
# [HIGH] Raw filtering in Input class broken in Joomla 4
# [MEDIUM] Publish / unpublish icon doesn't work under Joomla 4
# [MEDIUM] Action Log plugins don't work under Joomla 4

FOF 3.5.3
================================================================================
~ The custom_css option now applies to all renderers
~ Optimized the way the default media query is determined
~ Improve the CacheCleaner helper

FOF 3.5.2
================================================================================
+ Blade: bust OPcode cache when writing a compiled template file [gh-687]
+ Blade: do not cache compiled files when Debug Site is set to Yes, forcing recompilation during site development
+ Platform abstraction for setting / getting script parameters
~ Alternate class inclusion for JHtml helpers to work around Joomla bugs [admintools/222]
# [HIGH] Template overrides for module and plugin view templates would not work
# [HIGH] View templates were always loaded from this side of the application, ignoring 'site:' and 'admin:' prefixes