@@ -27,95 +27,10 @@ class AesTest extends FOFTestCase
 	 */
 	protected function setUp()
 	{
-		// Check if PHP has mcrypt installed
-		if (function_exists('mcrypt_module_open') || function_exists('openssl_encrypt'))
+		// Check if PHP has OpenSSL installed
+		if (function_exists('openssl_encrypt'))
 		{
 			$this->aes = new Aes('x123456789012345678901234567890x');
-		}
-	}
-
-	/**
-	 * @covers FOF30\Encrypt\Aes::IsSupported
-	 *
-	 * @return  void
-	 */
-	public function testIsSupported()
-	{
-		if (version_compare(PHP_VERSION, '7.0.0', 'ge'))
-		{
-			$this->markTestSkipped('mcrypt is deprecated in PHP 7');
-		}
-
-		$functions_enabled = array(
-			'mcrypt_get_key_size',
-			'mcrypt_get_iv_size',
-			'mcrypt_create_iv',
-			'mcrypt_encrypt',
-			'mcrypt_decrypt',
-			'mcrypt_list_algorithms',
-			'hash',
-			'hash_algos',
-			'base64_encode',
-			'base64_decode'
-		);
-
-		$algorithms = array(
-			'rijndael-128',
-			'rijndael-192',
-			'rijndael-256',
-		);
-
-		$hashAlgos = array(
-			'sha256'
-		);
-
-		// Create a mock php function with all prerequisites met
-		$phpfunc = new MockPhpfunc();
-		$phpfunc->setFunctions($functions_enabled);
-		$phpfunc->setMcryptAlgorithms($algorithms);
-		$phpfunc->setHashAlgorithms($hashAlgos);
-
-		// Just for code coverage
-		$this->assertNotNull(Aes::isSupported());
-
-		// All prerequisites met = supported
-		$this->assertTrue(Aes::isSupported($phpfunc), 'All prerequisites met = supported');
-
-		// No hash algorithms = not supported
-		$phpfunc->setHashAlgorithms(array());
-		$this->assertFalse(Aes::isSupported($phpfunc), 'No hash algorithms = not supported');
-		$phpfunc->setHashAlgorithms($hashAlgos);
-
-		// No mcrypt algorithms = not supported
-		$phpfunc->setMcryptAlgorithms(array());
-		$this->assertFalse(Aes::isSupported($phpfunc), 'No mcrypt algorithms = not supported');
-		$phpfunc->setMcryptAlgorithms($algorithms);
-
-		// No required functions available = not supported
-		$phpfunc->setFunctions(array());
-		$this->assertFalse(Aes::isSupported($phpfunc), 'No required functions available = not supported');
-		$phpfunc->setFunctions($functions_enabled);
-
-		// Test with diminishing amounts of supported mcrypt algos (=not supported) – for code coverage
-		$temp = $algorithms;
-
-		while (!empty($temp))
-		{
-			array_pop($temp);
-			$phpfunc->setMcryptAlgorithms($temp);
-			$this->assertFalse(Aes::isSupported($phpfunc));
-		}
-
-		$phpfunc->setMcryptAlgorithms($algorithms);
-
-		// Test with diminishing amounts of supported functions (=not supported) – for code coverage
-		$temp = $functions_enabled;
-
-		while (!empty($temp))
-		{
-			array_pop($temp);
-			$phpfunc->setFunctions($temp);
-			$this->assertFalse(Aes::isSupported($phpfunc));
 		}
 	}
 
@@ -257,97 +172,9 @@ class AesTest extends FOFTestCase
 	 *
 	 * @return  void
 	 */
-	public function testCryptCrossCompatibility()
-	{
-		if (version_compare(PHP_VERSION, '7.0.0', 'ge'))
-		{
-			$this->markTestSkipped('mcrypt is deprecated in PHP 7');
-		}
-
-		if (function_exists('mcrypt_module_open') && function_exists('openssl_encrypt'))
-		{
-			$phpfunc = new MockPhpfunc();
-			$phpfunc->setFunctions(array(
-				'openssl_get_cipher_methods',
-				'openssl_random_pseudo_bytes',
-				'openssl_cipher_iv_length',
-				'openssl_encrypt',
-				'openssl_decrypt',
-				'hash',
-				'hash_algos',
-				'base64_encode',
-				'base64_decode'
-			));
-
-			$aes   = new Aes('x123456789012345678901234567890x', 128, 'cbc', $phpfunc);
-			$mcAes = new Aes('The quick brown fox jumped over the lazy dog', 128, 'cbc');
-			$osAes = new Aes('The quick brown fox jumped over the lazy dog', 128, 'cbc', $phpfunc);
-
-			// Regular string
-			$str = 'THATISINSANE';
-			$es  = $this->aes->encryptString($str, true);
-			$ds  = $aes->decryptString($es, true);
-			$ds  = rtrim($ds, "\000");
-			$this->assertNotEquals($str, $es);
-			$this->assertEquals($str, $ds, 'Regular string, encrypt mcrypt, decrypt OpenSSL');
-
-			// UTF-8 data
-			$str = 'Χρησιμοποιώντας μη λατινικούς χαρακτήρες';
-			$es  = $this->aes->encryptString($str, false);
-			$ds  = $aes->decryptString($es, false);
-			$ds  = rtrim($ds, "\000");
-			$this->assertNotEquals($str, $es);
-			$this->assertEquals($str, $ds, 'Unicode string, encrypt mcrypt, decrypt OpenSSL');
-
-			// Using an odd sized keystring (using sha256 to convert it to a key)
-			$str = 'This is some very secret stuff that you are not supposed to transmit in clear text';
-			$es  = $mcAes->encryptString($str, true);
-			$ds  = $osAes->decryptString($es, true);
-			$ds  = rtrim($ds, "\000");
-			$this->assertNotEquals($str, $es);
-			$this->assertEquals($str, $ds, 'Legacy mode, encrypt mcrypt, decrypt OpenSSL');
-
-
-			// Regular string
-			$str = 'THATISINSANE';
-			$es  = $aes->encryptString($str, true);
-			$ds  = $this->aes->decryptString($es, true);
-			$ds  = rtrim($ds, "\000");
-			$this->assertNotEquals($str, $es);
-			$this->assertEquals($str, $ds, 'Regular string, encrypt OpenSSL, decrypt mcrypt');
-
-			// UTF-8 data
-			$str = 'Χρησιμοποιώντας μη λατινικούς χαρακτήρες';
-			$es  = $aes->encryptString($str, false);
-			$ds  = $this->aes->decryptString($es, false);
-			$ds  = rtrim($ds, "\000");
-			$this->assertNotEquals($str, $es);
-			$this->assertEquals($str, $ds, 'Unicode string, encrypt OpenSSL, decrypt mcrypt');
-
-			// Using an odd sized keystring (using sha256 to convert it to a key)
-			$str = 'This is some very secret stuff that you are not supposed to transmit in clear text';
-			$es  = $osAes->encryptString($str, true);
-			$ds  = $mcAes->decryptString($es, true);
-			$ds  = rtrim($ds, "\000");
-			$this->assertNotEquals($str, $es);
-			$this->assertEquals($str, $ds, 'Legacy mode, encrypt OpenSSL, decrypt mcrypt');
-
-		}
-		else
-		{
-			$this->markTestSkipped('mcrypt and OpenSSL are not supported on this system');
-		}
-	}
-
-
-	/**
-	 * @covers FOF30\Encrypt\Aes
-	 *
-	 * @return  void
-	 */
 	public function testCryptProcess()
 	{
-		if (function_exists('mcrypt_module_open') || function_exists('openssl_encrypt'))
+		if (function_exists('openssl_encrypt'))
 		{
 			// Regular string
 			$str = 'THATISINSANE';
@@ -378,51 +205,7 @@ class AesTest extends FOFTestCase
 		}
 		else
 		{
-			$this->markTestSkipped('mcrypt and OpenSSL are not supported on this system');
-		}
-	}
-
-	/**
-	 * @covers FOF30\Encrypt\Aes
-	 *
-	 * @return  void
-	 */
-	public function testCryptProcess192()
-	{
-		if (function_exists('mcrypt_module_open'))
-		{
-			$this->aes = new Aes('The quick brown fox jumped over the lazy dog', 192);
-
-			// Regular string
-			$str = 'THATISINSANE';
-
-			$es = $this->aes->encryptString($str, true);
-			$ds = $this->aes->decryptString($es, true);
-			$ds = rtrim($ds, "\000");
-			$this->assertNotEquals($str, $es);
-			$this->assertEquals($str, $ds);
-
-			// UTF-8 data
-			$str = 'Χρησιμοποιώντας μη λατινικούς χαρακτήρες';
-			$es  = $this->aes->encryptString($str, false);
-			$ds  = $this->aes->decryptString($es, false);
-			$ds  = rtrim($ds, "\000");
-			$this->assertNotEquals($str, $es);
-			$this->assertEquals($str, $ds);
-
-			// Using an odd sized keystring (using sha256 to convert it to a key)
-			$this->aes = new Aes('The quick brown fox jumped over the lazy dog');
-			$str       = 'This is some very secret stuff that you are not supposed to transmit in clear text';
-			$es        = $this->aes->encryptString($str, true);
-			$ds        = $this->aes->decryptString($es, true);
-			$ds        = rtrim($ds, "\000");
-			$this->assertNotEquals($str, $es);
-			$this->assertEquals($str, $ds);
-
-		}
-		else
-		{
-			$this->markTestSkipped('mcrypt is not supported on this system');
+			$this->markTestSkipped('OpenSSL is not supported on this system');
 		}
 	}
 
@@ -433,12 +216,12 @@ class AesTest extends FOFTestCase
 	 */
 	public function testCryptProcess128()
 	{
-		if (function_exists('mcrypt_module_open') || function_exists('openssl_encrypt'))
+		if (function_exists('openssl_encrypt'))
 		{
 			$this->aes = new Aes('The quick brown fox jumped over the lazy dog', 128);
 
 			// Regular string
-			$str = 'THATISINSANE';
+			$str = 'This is a fairly regular sample string';
 
 			$es = $this->aes->encryptString($str, true);
 			$ds = $this->aes->decryptString($es, true);
@@ -466,7 +249,7 @@ class AesTest extends FOFTestCase
 		}
 		else
 		{
-			$this->markTestSkipped('mcrypt and OpenSSL are not supported on this system');
+			$this->markTestSkipped('OpenSSL is not supported on this system');
 		}
 	}
 
@@ -477,7 +260,7 @@ class AesTest extends FOFTestCase
 	 */
 	public function testCryptProcessEcb()
 	{
-		if (function_exists('mcrypt_module_open') || function_exists('openssl_encrypt'))
+		if (function_exists('openssl_encrypt'))
 		{
 			$this->aes = new Aes('The quick brown fox jumped over the lazy dog', 256, 'ecb');
 
@@ -510,7 +293,7 @@ class AesTest extends FOFTestCase
 		}
 		else
 		{
-			$this->markTestSkipped('mcrypt and OpenSSL are not supported on this system');
+			$this->markTestSkipped('OpenSSL is not supported on this system');
 		}
 	}
 
@@ -521,7 +304,7 @@ class AesTest extends FOFTestCase
 	 */
 	public function testCryptWithProperKeyExpansion()
 	{
-		if (function_exists('mcrypt_module_open') || function_exists('openssl_encrypt'))
+		if (function_exists('openssl_encrypt'))
 		{
 			$aes   = new Aes('x123456789012345678901234567890x', 128, 'cbc');
 
@@ -551,7 +334,7 @@ class AesTest extends FOFTestCase
 		}
 		else
 		{
-			$this->markTestSkipped('mcrypt or OpenSSL is not supported on this system');
+			$this->markTestSkipped('OpenSSL is not supported on this system');
 		}
 	}
 }
