@@ -60,11 +60,6 @@ class Randval implements RandvalInterface
 			}
 		}
 
-		if ($this->phpfunc->extension_loaded('mcrypt'))
-		{
-			return $this->phpfunc->mcrypt_create_iv($bytes, MCRYPT_DEV_URANDOM);
-		}
-
 		return $this->genRandomBytes($bytes);
 	}
 
